force-app/main/default/objects/Job_Tracker__c/Job_Tracker__c.object-meta.xml
<CustomObject>
    <description>Track the status and output for Apex batch jobs.</description>
    <label>Job Tracker</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Tracker Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>