force-app/main/default/objects/Job_Tracker__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Job Id</inlineHelpText>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>