force-app/main/default/objects/Job_Tracker__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the Apex class for this job.</inlineHelpText>
    <label>Job Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>