force-app/main/default/objects/Job_Tracker__c/fields/Nbr_Batches__c.field-meta.xml
<CustomField>
    <fullName>Nbr_Batches__c</fullName>
    <inlineHelpText>The number of batches that ran</inlineHelpText>
    <label>Nbr Batches</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>