force-app/main/default/objects/Job_Tracker__c/fields/Nbr_Errors__c.field-meta.xml
<CustomField>
    <fullName>Nbr_Errors__c</fullName>
    <inlineHelpText>The number of batches that had errors</inlineHelpText>
    <label>Nbr Errors</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>