force-app/main/default/objects/Job_Tracker__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The output for this apex job.</inlineHelpText>
    <label>Notes</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>