force-app/main/default/objects/Job_Tracker__c/fields/Process_End__c.field-meta.xml
<CustomField>
    <fullName>Process_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did this Process End?</inlineHelpText>
    <label>Process End</label>
    <type>DateTime</type>
</CustomField>