force-app/main/default/objects/Job_Tracker__c/fields/Process_Start__c.field-meta.xml
<CustomField>
    <fullName>Process_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did this job start?</inlineHelpText>
    <label>Process Start</label>
    <type>DateTime</type>
</CustomField>