force-app/main/default/objects/Job_Tracker__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The status of this job</inlineHelpText>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>