force-app/main/default/objects/Job_Tracker__c/listViews/AccountCurrentClientBatch.listView-meta.xml
<ListView>
    <fullName>AccountCurrentClientBatch</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Notes__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Name__c</field>
        <operation>equals</operation>
        <value>AccountCurrentClientBatch</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <label>AccountCurrentClientBatch</label>
</ListView>