force-app/main/default/objects/Job_Tracker__c/listViews/AcctSensitivityQueueable_Last_N_Days.listView-meta.xml
<ListView>
    <fullName>AcctSensitivityQueueable_Last_N_Days</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>Nbr_Batches__c</columns>
    <columns>Nbr_Errors__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:2</value>
    </filters>
    <filters>
        <field>Job_Name__c</field>
        <operation>startsWith</operation>
        <value>AcctSensitivityQueueable</value>
    </filters>
    <label>AcctSensitivityQueueable - Last N Days</label>
</ListView>