force-app/main/default/objects/Job_Tracker__c/listViews/HoldOutAcctBatchLastNDays.listView-meta.xml
<ListView>
    <fullName>HoldOutAcctBatchLastNDays</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>Nbr_Batches__c</columns>
    <columns>Nbr_Errors__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:4</value>
    </filters>
    <filters>
        <field>Job_Name__c</field>
        <operation>startsWith</operation>
        <value>HoldOutAcctBatch</value>
    </filters>
    <label>HoldOutAcctBatch</label>
</ListView>