force-app/main/default/objects/Job_Tracker__c/listViews/MMSASOPartnerQueueable.listView-meta.xml
<ListView>
    <fullName>MMSASOPartnerQueueable</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>Nbr_Batches__c</columns>
    <columns>Nbr_Errors__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Job_Name__c</field>
        <operation>equals</operation>
        <value>MMSASOPartnerQueueable</value>
    </filters>
    <label>MMSASOPartnerQueueable</label>
</ListView>